# fastly-example

./: Cargo.toml  fastly copy.toml  fastly.toml
src/: main.rs
