[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
env = "0.0.0"
fastly = "0.9.4"
serde = "1.0.188"
serde_json = "1.0.105"
simplehttp = { path="../../simplehttp", features = ["fastly"] }
surrealdb-http = { path="../../surrealdb-http"}
